@@ -7,6 +7,9 @@ indicator-datetime (12.10.3-0ubuntu1) UNRELEASED; urgency=low
     - Drop Build-Depends on cdbs, bump debhelper to (>= 9). 
     - Update Vcs-Bzr and Vcs-Browser, add a notice for uploaders.
   * debian/compat: bump compat level to 9.
+  * debian/rules:
+    - Switch to using the dh sequencer instead of cdbs rules, adjust targets
+      accordingly.
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 16 Nov 2012 15:17:20 -0500
 
